fix grid align

--- a/src/components/countriesGrid/styles.module.css
+++ b/src/components/countriesGrid/styles.module.css
@@ -7,6 +7,7 @@
   gap: 20px;
   flex-wrap: wrap;
   overflow-y: auto;
+  align-content: flex-start;
 }
 
 .loader_wrapper {
